hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_barrier@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  %"0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"6_0" = alloca i64, align 8
  %"6_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 42, i64* %"5_0", align 4
  %"5_01" = load i64, i64* %"5_0", align 4
  %"5_02" = load i64, i64* %"5_0", align 4
  store i64 %"5_01", i64* %"6_0", align 4
  store i64 %"5_02", i64* %"6_1", align 4
  %"6_03" = load i64, i64* %"6_0", align 4
  store i64 %"6_03", i64* %"0", align 4
  %"04" = load i64, i64* %"0", align 4
  ret i64 %"04"
}
