hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_const_external_symbol@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sym2 = external global { i1, i64, i2 }
@sym1 = external constant i64

define { i64, { i1, i64, i2 } } @_hl.main.1() {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca { i1, i64, i2 }, align 8
  %"7_0" = alloca { i1, i64, i2 }, align 8
  %"5_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %sym2 = load { i1, i64, i2 }, { i1, i64, i2 }* @sym2, align 4
  store { i1, i64, i2 } %sym2, { i1, i64, i2 }* %"7_0", align 4
  %sym1 = load i64, i64* @sym1, align 4
  store i64 %sym1, i64* %"5_0", align 4
  %"5_01" = load i64, i64* %"5_0", align 4
  %"7_02" = load { i1, i64, i2 }, { i1, i64, i2 }* %"7_0", align 4
  store i64 %"5_01", i64* %"0", align 4
  store { i1, i64, i2 } %"7_02", { i1, i64, i2 }* %"1", align 4
  %"03" = load i64, i64* %"0", align 4
  %"14" = load { i1, i64, i2 }, { i1, i64, i2 }* %"1", align 4
  %mrv = insertvalue { i64, { i1, i64, i2 } } undef, i64 %"03", 0
  %mrv5 = insertvalue { i64, { i1, i64, i2 } } %mrv, { i1, i64, i2 } %"14", 1
  ret { i64, { i1, i64, i2 } } %mrv5
}
