hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_make_tuple@llvm14.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i1, i1 } @_hl.main.1(i1 %0, i1 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = insertvalue { i1, i1 } poison, i1 %0, 0
  %3 = insertvalue { i1, i1 } %2, i1 %1, 1
  ret { i1, i1 } %3
}
